--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "image": "input1.jpg",
+    "image": "input.jpg",
     "text": "Lioness",
     "music": "background_music.mp3",
     "subtitles": "A majestic lioness stands proudly, scanning the horizon across the vast savanna.",
